style: Fix nav alignment

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -13,6 +13,7 @@
 
 .links__div, .links__div * {
   display: flex;
+  align-items: center;
   gap: min(5vw, 3rem);
   text-decoration: none;
   font-size: 1.25rem;
